--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,5 @@
 	<body>
 		<h1>Admin</h1>
 	</body>
-	<script src="vendor-2.js"></script>
-	<script src="admin.js"></script>
+	<script src="bundle.js"></script>
 </html>
