--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,5 @@
 	<body>
 		<h1>Checkout</h1>
 	</body>
-	<script src="vendor-1.js"></script>
-	<script src="vendor-2.js"></script>
-	<script src="checkout.js"></script>
+	<script src="bundle.js"></script>
 </html>
