--- a/browse.html
+++ b/browse.html
@@ -3,7 +3,5 @@
 	<body>
 		<h1>Browse</h1>
 	</body>
-	<script src="vendor-1.js"></script>
-	<script src="vendor-2.js"></script>
-	<script src="browse.js"></script>
+	<script src="bundle.js"></script>
 </html>
